# Titanic-Machine-Learning-from-Disaster

./: .dockerignore  .gitignore  .markdownlint.json  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-deploy-azure.yml  build-deploy.yml  build-push-docker.yml  build.yml  ci.yml  deploy-azure.yml  deploy-docs.yml  deploy-render.yml  main_titanic-survival-predictor.yml  markdown-lint.yml  python-lint.yml  python-tests.yml  python-typecheck.yml  security-audit.yml  security.yml  train-model.yml
data/kaggle_submissions/notebook/: 01_voting_clf_submission.csv  02_xgb_tuned_submission.csv
data/processed/: test.csv  test_augmented.csv  train.csv  train_augmented.csv
docs/: advanced_features.md  index.md
docs/explanations/: advanced-features.md  methodology.md
docs/guides/: advanced-features.md  api.md  architecture.md  configuration.md  deployment.md  documentation.md  explainability.md  installation.md  quickstart.md  testing.md
docs/javascripts/: mathjax.js
docs/reference/: api.md  api_quick_reference.md
docs/technical/: class-imbalance.md  logging-enhancements.md
explanations/advanced-features/: index.html
explanations/methodology/: index.html
guides/advanced-features/: index.html
guides/api/: index.html
guides/architecture/: index.html
guides/configuration/: index.html
guides/deployment/: index.html
guides/documentation/: index.html
guides/explainability/: index.html
guides/installation/: index.html
guides/quickstart/: index.html
guides/testing/: index.html
javascripts/: mathjax.js
kaggle_submissions/: submission.csv
models/: model.pkl  preprocessor.pkl  titanic_production_pipeline.pkl
notebook/: Titanic-Machine-Learning-from-Disaster.ipynb
notebooks/: Titanic-Machine-Learning-from-Disaster.ipynb
notebooks/kaggle_submissions/: 03_optimised_model_submission.csv
notebooks/utils/: __init__.py  config.py  notebook_helpers.py  visualization.py
reference/api/: index.html
reference/api_quick_reference/: index.html
saved_models/: preprocessor.pkl
saved_models/pipeline/: preprocessor.pkl
scripts/: run_api.py  run_inference.py  run_training.py
search/: search_index.json
src/: exception.py  notebook_config.py  utils.py  visualization.py
src/app/: __init__.py  routes.py
src/app/static/js/: script.js
src/app/templates/: index.html
src/config/: __init__.py  settings.py
src/data/: __init__.py  loader.py  transformer.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  predict.py  train.py
src/pipeline/: __init__.py  train_pipeline.py
src/titanic_ml/: __init__.py
src/titanic_ml/app/: messages.py  routes.py
src/titanic_ml/app/static/: openapi.yaml
src/titanic_ml/app/static/css/: style.css
src/titanic_ml/app/static/js/: script.js
src/titanic_ml/app/templates/: home.html  index.html
src/titanic_ml/config/: __init__.py  settings.py
src/titanic_ml/data/: __init__.py  loader.py  transformer.py
src/titanic_ml/features/: build_features.py
src/titanic_ml/models/: predict.py  schemas.py  train.py
src/titanic_ml/scripts/: __init__.py  run_api.py  run_inference.py  run_training.py
src/titanic_ml/utils/: exception.py  helpers.py  logger.py
src/utils/: helpers.py
static/: openapi.yaml
stylesheets/: extra.css
technical/class-imbalance/: index.html
technical/logging-enhancements/: index.html
tests/: README.md  conftest.py
tests/integration/: test_api.py
tests/ui/: home.test.js
tests/unit/: predict_pipeline_test.py  test_data_loader.py  test_feature_engineering.py  test_prediction.py  test_utils.py
titanic_ml/: __init__.py
titanic_ml/app/: __init__.py  routes.py
titanic_ml/config/: settings.py
titanic_ml/data/: loader.py  transformer.py
titanic_ml/features/: __init__.py  build_features.py
titanic_ml/models/: __init__.py  predict.py  schemas.py  train.py
titanic_ml/utils/: __init__.py  exception.py  helpers.py  logger.py
