[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic-survival-predictor-app"
version = "0.1.0"
description = "A machine learning project to predict Titanic survival rate of a given datapoint."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = [
    "machine-learning",
    "data-science",
    "titanic",
    "survival-prediction",
    "sklearn",
    "catboost",
    "xgboost",
]
authors = [
    {name = "Kristiyan Bonev", email = "k.s.bonev@gmail.com"}
]
maintainers = [
    {name = "Kristiyan Bonev", email = "k.s.bonev@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core ML & Data Processing
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "catboost>=1.2.0,<2.0.0",
    "xgboost>=2.1.0,<3.0.0",
    # Model Explainability
    "shap>=0.46.0,<0.47.0",
    "matplotlib>=3.9.0,<4.0.0",
    # Configuration Management
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    # Utilities
    "dill>=0.3.0,<0.4.0",
    # Web Framework
    "Flask>=3.0.0,<4.0.0",
    "flask-swagger-ui>=4.11.1,<5.0.0",
    "seaborn>=0.13.2",
]

# Optional dependency groups
[dependency-groups]
# Development tools (testing, linting, formatting)
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.6.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pip-audit>=2.9.0,<3.0.0",
    "bandit>=1.8.0,<2.0.0",
    "pymarkdownlnt>=0.9.17,<1.0.0",
]

# Jupyter notebook execution
notebooks = [
    "jupyterlab>=4.4.10,<5.0.0",
    "ipykernel>=7.0.1,<8.0.0",
    "ipywidgets>=8.1.7,<9.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "plotly>=6.0.0,<7.0.0",
]

# Documentation site generation
docs = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocstrings[python]>=0.27.0,<1.0.0",
    "pymdown-extensions>=10.0.0,<11.0.0",
]

# Setuptools configuration for titanic_ml package
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["titanic_ml*"]
namespaces = false

[tool.setuptools.package-data]
"titanic_ml.app" = ["templates/*", "static/css/*", "static/js/*", "static/images/*"]

# Entry points for CLI commands
[project.scripts]
titanic-train = "titanic_ml.models.train:main"
titanic-predict = "titanic_ml.models.predict:main"
titanic-api = "titanic_ml.app.routes:main"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
exclude = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg",
    "reports",
    "site",
    ".venv",
    "venv",
    "notebooks",
    ".pytest_cache",
    "__pycache__",
    "artifacts",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "D"]  # Includes docstring checks
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in argument defaults
    "B904",   # Exception chaining (use `from` for clarity)
    "D203",   # 1 blank line before class (conflicts with D211)
    "D213",   # Multi-line docstring summary second line (conflicts with D212)
    "D205",   # 1 blank line between summary and description (too strict)
    "D415",   # First line punctuation (docstrings can be phrases)
    "D102",   # Missing docstring in public method (too verbose for simple methods)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
strict_optional = false
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
# Test discovery patterns
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test paths
testpaths = ["tests"]

# Additional options
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage/html",
    "--cov-report=xml:reports/coverage/coverage.xml",
    "--cov-fail-under=40",
    "--strict-markers",
    "--disable-warnings",
]

# Markers for categorizing tests
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for API endpoints",
    "slow: Tests that take longer to run",
    "requires_model: Tests that require ML model loading",
]

# Ignore directories
norecursedirs = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg",
    "reports",
    "site",
    ".venv",
    "venv",
    ".pytest_cache",
    "__pycache__",
    "artifacts",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/notebooks/*",
]
data_file = "reports/coverage/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "reports/coverage/html"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.bandit]
exclude_dirs = [
    ".venv",
    "venv",
    "notebooks",
    "site",
    ".pytest_cache",
    "__pycache__",
]
# B101: assert_used - Asserts are acceptable in test/dev code
# B104: hardcoded_bind_all_interfaces - Dev server binds are intentional (0.0.0.0 for containers)
# B108: hardcoded_tmp_directory - Temp paths are controlled
skips = ["B101", "B104", "B108"]

# Markdown linting
[tool.pymarkdown]
plugins.md013.enabled = false  # Disable line length check (tables/code blocks can be long)
plugins.md033.enabled = false  # Allow inline HTML (useful for badges, images)
plugins.md013.line_length = 120  # Set reasonable line length if enabled
plugins.md036.enabled = false  # Allow emphasis as pseudo-headings (common in docs)
plugins.md024.enabled = false  # Allow duplicate headings (useful for examples)
plugins.md040.enabled = false  # Don't require language for all code blocks (examples may not have)
plugins.md031.enabled = false  # Allow code blocks without surrounding blank lines (nested examples)
extensions.front-matter.enabled = true  # Support YAML front matter
extensions.tables.enabled = true  # Enable table support
